Changed classes using new classes.